k8s/nexus-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: polycloud-nexus
  namespace: polycloud-nexus
  labels:
    app.kubernetes.io/name: polycloud-nexus
spec:
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: polycloud-nexus
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polycloud-nexus
  namespace: polycloud-nexus
  labels:
    app.kubernetes.io/name: polycloud-nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: polycloud-nexus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: polycloud-nexus
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      terminationGracePeriodSeconds: 18000 # 5 hours
      containers:
        - name: polycloud-nexus
          image: "duratm/nexxus:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 4000
              protocol: TCP
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: polycloud-nexus
  namespace: polycloud-nexus
  labels:
     app: polycloud
     component: websocket-backend
spec:
    hosts:
      - "nexus.duratm.com"
    gateways:
      - nexus-gateway
    http:
      - route:
        - destination:
            host: polycloud-nexus
            port:
              number: 4000
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: nexus-gateway
  namespace: polycloud-nexus
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "nexus.duratm.com"
